// Copyright 2024 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.autoupdate.v1;

import "teleport/header/v1/metadata.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/autoupdate/v1;autoupdate";

// ClusterAutoupdateConfigV1 is a config singleton used to configure cluster
// autoupdate settings.
message ClusterAutoUpdateConfig {
  string kind = 1;
  string sub_kind = 2;
  string version = 3;
  teleport.header.v1.Metadata metadata = 4;

  ClusterAutoUpdateConfigSpec spec = 5;
}

// ClusterAutoupdateConfigSpecV1 encodes the parameters of the autoupdate config object.
message ClusterAutoUpdateConfigSpec {
  // ToolsAutoUpdate encodes the feature flag to enable/disable tools autoupdates.
  string tools_auto_update = 1;
}

// AutoupdateVersionV1 is a resource singleton with version required for
// tools autoupdate.
message AutoUpdateVersion {
  string kind = 1;
  string sub_kind = 2;
  string version = 3;
  teleport.header.v1.Metadata metadata = 4;

  AutoUpdateVersionSpec spec = 5;
}

// AutoupdateVersionSpecV1 encodes the parameters of the autoupdate versions.
message AutoUpdateVersionSpec {
  // ToolsVersion is the semantic version required for tools autoupdates.
  string tools_version = 1;
}
